@@ -1,5 +1,6 @@
 17 Jul 2018
-fix: blu-ray releases getting incorrect imdbid
+fix: background image not 100% width
+fix: bluray releases getting incorrect imdbid
 
 16 Jul 2018
 add: bluray.com new releases page
